--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <nav>
             <a href="#" class="active">Home</a>
-            <!-- <a href="#" class="active">Services</a>
-            <a href="#" class="active">p1</a>
-            <a href="#" class="active">p2</a>
-            <a href="#" class="active">p3</a>
-            <a href="#" class="active">p4</a> -->
+            <!-- <a href="#" class="">Services</a>
+            <a href="#" class="">p1</a>
+            <a href="#" class="">p2</a>
+            <a href="#" class="">p3</a>
+            <a href="#" class="">p4</a> -->
         </nav>
     </header>
     <section class="home">
@@ -26,15 +26,23 @@
             <!-- <img src="Noo.png" alt=""> -->
         </div>
         <div class="home-content">
-            <h1>Hi.It's <span>Noo</span></h1>
+            <h1>Hi.It's <a href="#"><span>Noo</span></a></h1>
             <!-- <h3 class="typing-text">I'm a <span></span></h3> -->
             <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p> -->
         </div>
     </section>
     <footer><div class="social-icons">
-        <a href="#"></a>
+        <a href="https://steamcommunity.com/id/NoOneInMySide/"><i class="fa-brands fa-steam"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100025753519737"> <i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.instagram.com/___________noo__________/"> <i class="fa-brands fa-instagram"></i></a>
     </footer>
+    <audio id="backgroundMusic" autoplay loop>
+        <source src="Killswitch.mp3" type="audio/mpeg">
+    </audio>
+    <script>
+        // Set the volume of the audio element
+        const audioElement = document.getElementById("backgroundMusic");
+        audioElement.volume = 0.05; // Set volume to 50%
+    </script>
 </body>
 </html>
