--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
         <a href="https://www.instagram.com/___________noo__________/"> <i class="fa-brands fa-instagram"></i></a>
     </footer>
     <audio id="backgroundMusic" autoplay loop>
-        <source src="https://youtu.be/7BDAcLxO_CU?si=Auuti6ZvDPxbbRR9" type="audio/mpeg">
+        <source src="Killswitch.mp3" type="audio/mpeg">
     </audio>
     <script>
-        // Set the volume of the audio element
         const audioElement = document.getElementById("backgroundMusic");
-        audioElement.volume = 0.05; // Set volume to 50%
+        audioElement.volume = 0.05;
     </script>
 </body>
 </html>
