--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://www.facebook.com/profile.php?id=100025753519737"> <i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.instagram.com/___________noo__________/"> <i class="fa-brands fa-instagram"></i></a>
     </footer>
-    <audio id="backgroundMusic" autoplay loop>
+    <audio autoplay loop>
         <source src="Killswitch.mp3" type="audio/mpeg">
     </audio>
     <script>
