--- a/index.html
+++ b/index.html
@@ -6,42 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <title>Profiles Website</title>
 </head>
+
 <body>
     <header>
         <a href="#" class="logo">Profiles</a>
-
-        <nav>
+        <!-- <nav>
             <a href="#" class="active">Home</a>
-            <!-- <a href="#" class="">Services</a>
-            <a href="#" class="">p1</a>
-            <a href="#" class="">p2</a>
-            <a href="#" class="">p3</a>
-            <a href="#" class="">p4</a> -->
-        </nav>
+            <a href="#">Services</a>
+            <a href="#">p1</a>
+            <a href="#">p2</a>
+            <a href="#">p3</a>
+            <a href="#">p4</a>
+        </nav> -->
     </header>
+
     <section class="home">
         <div class="home-img">
             <!-- <img src="Noo.png" alt=""> -->
         </div>
         <div class="home-content">
-            <h1>Hi.It's <a href="#"><span>Noo</span></a></h1>
+            <h1>Hi. It's <a href="#"><span>Noo</span></a></h1>
             <!-- <h3 class="typing-text">I'm a <span></span></h3> -->
             <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p> -->
         </div>
     </section>
-    <footer><div class="social-icons">
-        <a href="https://steamcommunity.com/id/NoOneInMySide/"><i class="fa-brands fa-steam"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100025753519737"> <i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/___________noo__________/"> <i class="fa-brands fa-instagram"></i></a>
-    </footer>
-    <audio autoplay loop>
+
+    <audio id="BackGround-Music" loop>
         <source src="Killswitch.mp3" type="audio/mpeg">
     </audio>
+
+    <div class="music-controls">
+        <button onclick="playMusic()">Play Music</button>
+        <button onclick="pauseMusic()">Pause Music</button>
+    </div>
+
     <script>
-        const audioElement = document.getElementById("backgroundMusic");
-        audioElement.volume = 0.05;
+        const audio = document.getElementById('BackGround-Music');
+        audio.volume = 0.05;
+
+
+        function playMusic() {
+            if (audio.paused) {
+                audio.play();
+            }
+        }
+
+        function pauseMusic() {
+            if (!audio.paused) {
+                audio.pause();
+            }
+        }
     </script>
+
+<footer>
+    <div class="social-icons">
+        <a href="https://steamcommunity.com/id/NoOneInMySide/"><i class="fa-brands fa-steam"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100025753519737"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/___________noo__________/"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+</footer>
 </body>
+
 </html>
