--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <audio id="BackGround-Music" loop>
+    <audio id="BackGround-Music" autoplay loop>
         <source src="Killswitch.mp3" type="audio/mpeg">
     </audio>
 
@@ -45,7 +45,7 @@
 
     <script>
         const audio = document.getElementById('BackGround-Music');
-        audio.volume = 0.05;
+        audio.volume = 0.1;
 
 
         function playMusic() {
